--- a/Nov4thYr Project/Views/Appointment/AppointmentForm.cshtml
+++ b/Nov4thYr Project/Views/Appointment/AppointmentForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model Nov4thYr_Project.Models.Appointment2
+﻿@model Nov4thYr_Project.Models.Appointment4
 
 
 @{
@@ -16,6 +16,16 @@
     <h4>Appointment</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @*<input type="hidden" value="@ViewBag.iddrop" name="UserId" />*@
+            @Html.DropDownList("UserId", (List<SelectListItem>)ViewBag.iddrop, "User Id")
+            @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(model => model.PatientName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -59,31 +69,29 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Doctor, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @*\@Html.EditorFor(model => model.Doctor, new { htmlAttributes = new { @class = "form-control" } })*@
-
-            @*@Html.DropDownList(model => model.Doctor, (IEnumerable<SelectListItem>)ViewBag.Doctors, new { htmlAttributes = new { @class = "form-control" } })*@
-            @Html.DropDownListFor(model => model.Doctor, (IEnumerable<SelectListItem>)ViewBag.Doctors, new { htmlAttributes = new { @class = "form-control" } })
-
+            @Html.DropDownList("Doctor", (List<SelectListItem>)ViewBag.doctordrop, "Select doc")
             @Html.ValidationMessageFor(model => model.Doctor, "", new { @class = "text-danger" })
         </div>
     </div>
 
+
+
+
     <div class="form-group">
         @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @*@Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })*@
-            @Html.DropDownList("Start times", (IEnumerable<SelectListItem>)ViewBag.StartTime, "Select Start Time")
+            @Html.DropDownList("Date", (List<SelectListItem>)ViewBag.orderedTime, "Select time")
             @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @*<div class="form-group">
+            @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
