--- a/Nov4thYr Project/Views/Appointment/AppointmentForm.cshtml
+++ b/Nov4thYr Project/Views/Appointment/AppointmentForm.cshtml
@@ -17,11 +17,11 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
+        @*@Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })*@
         <div class="col-md-10">
             @*<input type="hidden" value="@ViewBag.iddrop" name="UserId" />*@
-            @Html.DropDownList("UserId", (List<SelectListItem>)ViewBag.iddrop, "User Id")
-            @Html.HiddenFor(model => model.UserId)
+            @*@Html.DropDownList("UserId", (List<SelectListItem>)ViewBag.iddrop, "User Id")*@
+            @Html.HiddenFor(m => m.UserId, new { Value = ViewBag.currID })
             @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
         </div>
     </div>
