--- a/Nov4thYr Project/Views/Appointment/AppointmentForm.cshtml
+++ b/Nov4thYr Project/Views/Appointment/AppointmentForm.cshtml
@@ -19,15 +19,14 @@
     <div class="form-group">
         @*@Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })*@
         <div class="col-md-10">
-            @*<input type="hidden" value="@ViewBag.iddrop" name="UserId" />*@
-            @*@Html.DropDownList("UserId", (List<SelectListItem>)ViewBag.iddrop, "User Id")*@
+            @*Hidden field with User ID*@
             @Html.HiddenFor(m => m.UserId, new { Value = ViewBag.currID })
             @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.PatientName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Patients Name", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.PatientName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.PatientName, "", new { @class = "text-danger" })
@@ -43,7 +42,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.PatientPhoneNum, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Phone Number", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.PatientPhoneNum, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.PatientPhoneNum, "", new { @class = "text-danger" })
