Organized layout, added Display Doctors Appointments page

--- a/Nov4thYr Project/Views/Patients/Index.cshtml
+++ b/Nov4thYr Project/Views/Patients/Index.cshtml
@@ -2,7 +2,7 @@
 
 <style>
     table {
-        width: 100%;
+        width: 120%;
     }
 
     table, th, td {
@@ -46,6 +46,7 @@
                     <th>Patients Name </th>
                     <th>Gender </th>
                     <th>Patients Phone Number </th>
+                    <th>Email</th>
                     <th>Symptoms </th>
                     <th>Doctor </th>
                     <th>Date </th>
@@ -58,6 +59,7 @@
                     <td>@Html.DisplayFor(m => item.PatientName)</td>
                     <td>@Html.DisplayFor(m => item.Gender)</td>
                     <td>@Html.DisplayFor(m => item.PhoneNumber)</td>
+                    <td>@Html.DisplayFor(m => item.Email)</td>
                     <td>@Html.DisplayFor(m => item.Symptoms)</td>
                     <td>@Html.DisplayFor(m => item.Doctor)</td>
                     <td>@Html.DisplayFor(m => item.Date)</td>
